# legendary-garbanzo

./: .gitignore  CMakeLists.txt  README.md
philosophers/: CMakeLists.txt  philosophers.cpp  philosophers.hpp  philosophers_bin.cpp
tests/: CMakeLists.txt  philosophers_test.cpp  quicksort_test.cpp
ඞquicksortඞ/: parallel.hpp  unparallel.hpp
ඞtestsඞ/: CMakeLists.txt  quicksort_test.cpp
